--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
     <groupId>cz.spring.guru</groupId>
     <artifactId>sfg-pet-clinic</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2</version>
     <name>sfg-pet-clinic</name>
     <description>Sfg pet clinic</description>
 
@@ -42,6 +42,6 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:HermannJirka/sfg-pet-clinic.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>sfg-pet-clinic-0.0.2</tag>
   </scm>
 </project>
